--- a/common/navbar.html
+++ b/common/navbar.html
@@ -28,20 +28,21 @@
         <!--This codes is for the Mobile Navbar drop down .
         To Center Navbar - added "container-fluid justify-content-center"
       -->
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <div class="mobileNavbar collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="container-fluid justify-content-center navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="mobileNavbar nav-item">
-              <a class="nav-link" aria-current="page" href="#">Neck Ties</a>
+       
+       <!-- <li class="mobileNavItems nav-item">
+              <a class="nav-link" aria-current="page" href="productListMain.html" onclick="setCategory('category','neckTies')">Neck Ties</a>
             </li>
-            <li class="mobileNavbar nav-item">
-              <a class="nav-link" href="#">Bow Ties</a>
+            <li class="mobileNavItems nav-item">
+              <a class="nav-link" href="#" onclick="setCategory('category','bowTies')">Bow Ties</a>
             </li>
-            <li class="mobileNavbar nav-item">
-              <a class="nav-link" href="#">Suspenders</a>
+            <li class="mobileNavItems nav-item">
+              <a class="nav-link" href="#" onclick="setCategory('category','tieClips')">Tie Clips</a>
             </li>
-            <li class="mobileNavbar nav-item">
-              <a class="nav-link" href="#">Cuff Links</a>
-            </li>
+            <li class="mobileNavItems nav-item">
+              <a class="nav-link" href="#" onclick="setCategory('category','cuffLinks')">Cuff Links</a>
+            </li>-->
           </ul>
         </div>
       </div>
@@ -49,21 +50,21 @@
 
 <!--This is for the Search button-->    
     <div class="container d-flex justify-content-start">
-      <form class="d-flex" role="search">
-        <input class="form-control me-2 overwriteHeight" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-primary me-2 overwriteHeight overwriteWidth" type="submit">Search</button>
+      <form class="d-flex" role="search" onsubmit="return false;">
+        <input id= "searchInput" class="form-control me-2 overwriteHeight" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-primary me-2 overwriteHeight overwriteWidth" type="submit" onclick="setQuery()">Search</button>
       </form>
     </div>
 
 <!--This is for the Login, Sign Up button and Cart Logo-->        
     <div class="container d-flex justify-content-end">
       <!--<button type="button" class="btn btn-outline-primary me-2 overwriteHeight overwriteWidth" >Login</button>-->
-      <a href="#" class="btn btn-outline-primary me-2 overwriteHeight overwriteWidth" >Login</a>
+      <a href="loginMain.html" class="btn btn-outline-primary me-2 overwriteHeight overwriteWidth" >Login</a>
 
       <!--<button type="button" class="btn btn-outline-primary me-2 overwriteHeight overwriteWidth">Sign-up</button>-->
-      <a href="#" class="btn btn-outline-primary me-2 overwriteHeight overwriteWidth" >Sign-up</a>
+      <!--<a href="adminMain.html" class="btn btn-outline-primary me-2 overwriteHeight overwriteWidth" >Admin</a>-->
 
-      <ion-icon name="cart-outline" size="large"></ion-icon>
+      <ion-icon name="cart-outline" id="cart-outline" size="large"></ion-icon>
     </div>
   </div>
   <p>
@@ -98,18 +99,18 @@
  -->
       <div class="mainNavbar collapse navbar-collapse" id="navbarSupportedContent" >
         <ul class="container-fluid justify-content-center navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item mx-4">
-            <a class="nav-link" aria-current="page" href="#">Neck Ties</a>
+          <!--<li class="nav-item mx-4">
+            <a class="nav-link" aria-current="page" href="productListMain.html" onclick="setCategory('category','neckTies')">Neck Ties</a>
           </li>
           <li class="nav-item mx-4" >
-            <a class="nav-link" href="#">Bow Ties</a>
+            <a class="nav-link" href="#" onclick="setCategory('category','bowTies')">Bow Ties</a>
           </li>
           <li class="nav-item mx-4" >
-            <a class="nav-link" href="#">Suspenders</a>
+            <a class="nav-link" href="#" onclick="setCategory('category','tieClips')">Tie Clips</a>
           </li>
           <li class="nav-item mx-4">
-            <a class="nav-link" href="#">Cuff Links</a>
-          </li>
+            <a class="nav-link" href="#" onclick="setCategory('category','cuffLinks')">Cuff Links</a>
+          </li>-->
         </ul>
       </div>
 
@@ -123,7 +124,7 @@
     <hr class="hr navbarHr" />
   </div>
 
- 
+  <script src="js/navbar.js"></script> 
 </body>
 
 </html>
