--- a/common/footer.html
+++ b/common/footer.html
@@ -20,7 +20,7 @@
                         <a class="nav-link active" href="#">Links</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About Us</a>
+                        <a class="nav-link" href="aboutusMain.html">About Us</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Contact Us</a>
