--- a/productPage/productTemplate.html
+++ b/productPage/productTemplate.html
@@ -21,25 +21,10 @@
             <li class="breadcrumb-item active" aria-current="page">Gold Necktie</li>
         </ol>
     </nav>
-    <section class="container product" style="max-width: 992px">
-        <div class="product-image-side">
-            <img src="images/TRSL0002sq.jpg" alt="Product Image 1">
-            <p>Made in Singapore. <br><br>Made of 100% recycled microfibre. <br><br>Measurement: Width 8cm, Length
-                152cm <br><br>Care instruction: Dry cleaning recommended
-            </p>
-        </div>
-        <div class="product-name-side">
-            <h2>Product Name</h2>
-            <p>$59.00</p>
-            <form action="add-to-cart.php" method="post">
-                <label for="quantity">Quantity:</label>
-                <input type="number" name="quantity" id="quantity" value="1" min="1" max="10">
-                <button type="submit">Add to Cart</button>
-            </form>
-        </div>
-        <div id="product-container"></div>
-        
-    </section>
+
+    <div class="product-name"></div>
+    <div class="product-description"></div>
+    <div class="product-image"></div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
