--- a/productPage/productlist.html
+++ b/productPage/productlist.html
@@ -17,74 +17,48 @@
 </head>
 
 <body>
+    <nav class="container" style="--bs-breadcrumb-divider: '>'; max-width: 992px;" aria-label="breadcrumb">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="#">Home</a></li>
+            <li class="breadcrumb-item active" aria-current="page">Neckties</li>
+        </ol>
+    </nav>
 
-    <!-- <div class="container-fluid"> -->
-        <div class="productContainer">
-            <div class="product">
-                <a href="productpage/product.html">
-                    <img src="images/TRSL0002sq.jpg">
-                    Necktie 1
-                    <p>$59.00</p>
-                </a>
-            </div>
-            <div class="product">
-                <a href="#">
-                    <img src="images/TRSL0003sq.jpg">
-                    Necktie 2
-                    <p>$59.00</p>
-                </a>
-            </div>
-            <div class="product">
-                <a href="#">
-                    <img src="images/TRSL0004sq.jpg">
-                    Necktie 3
-                    <p>$59.00</p>
-                </a>
-            </div>
-            <div class="product">
-                <a href="#">
-                    <img src="images/TRSL0005sq.jpg">
-                    Necktie 4
-                    <p>$59.00</p>
-                </a>
-            </div>
-            <div class="product">
-                <a href="#">
-                    <img src="images/TRSL0006sq.jpg">
-                    Necktie 5
-                    <p>$59.00</p>
-                </a>
-            </div>
-            <div class="product">
-                <a href="#">
-                    <img src="images/TRSL0007sq.jpg">
-                    Necktie 6
-                    <p>$59.00</p>
-                </a>
-            </div>
-            <div class="product">
-                <a href="#">
-                    <img src="images/TRSL0008sq.jpg">
-                    Necktie 7
-                    <p>$59.00</p>
-                </a>
-            </div>
-            <div class="product">
-                <a href="#">
-                    <img src="images/TRSL0009sq.jpg">
-                    Necktie 8
-                    <p>$59.00</p>
-                </a>
-            </div>
-            <div class="product">
-                <a href="#">
-                    <img src="images/TRSL0010sq.jpg">
-                    Necktie 9
-                    <p>$59.00</p>
-                </a>
+    <div class="container" style="max-width: 992px">
+        <div id="list-items">
+            <div id='row' class="row">
+
+
+
+
             </div>
         </div>
-    <!-- </div> -->
+    </div>
+
+    <nav class="container pageNav" style="max-width: 992px" aria-label="Page navigation">
+        <ul class="pagination">
+            <li class="page-item">
+                <a class="page-link" href="#" aria-label="Previous">
+                    <span aria-hidden="true">&laquo;</span>
+                </a>
+            </li>
+            <li class="page-item"><a class="page-link" href="#">1</a></li>
+            <li class="page-item"><a class="page-link" href="#">2</a></li>
+            <li class="page-item"><a class="page-link" href="#">3</a></li>
+            <li class="page-item">
+                <a class="page-link" href="#" aria-label="Next">
+                    <span aria-hidden="true">&raquo;</span>
+                </a>
+            </li>
+        </ul>
+    </nav>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.min.js"></script>
+
+    <script src="js/myJS.js"></script>
 
 </body>
 
