--- a/common/login.html
+++ b/common/login.html
@@ -20,7 +20,7 @@
         <h1 class="text-center">Log In</h1>
         <form class="needs-validation">
             <div class="form-group was validated">
-                <label class="form-label" for="user name">User Name</label>
+                <label class="form-label" for="user name">EMail </label>
                 <input class="form-control" type="user name" id="user name" required>
                 
                 <!-- <div class="Invalid-feedback">
