--- a/common/adminproduct.html
+++ b/common/adminproduct.html
@@ -19,6 +19,11 @@
                
                <label for="Category">Category</label>
                <select class="form-select form-select-lg mb-3" aria-label=".form-select-lg example">
+                <option value="">Please Select</option>
+                  <option value="neckties">Neck Ties</option>
+                  <option value="bowties">Bow Ties</option>
+                  <option value="suspenders">Suspendeers</option>
+                  <option value="cufflinks">Cuff Links</option>
               </select>
                <div class="form-group  mb-4">
                    <label for="exampleInputEmail1">Product Name</label>
