--- a/aboutusMain.html
+++ b/aboutusMain.html
@@ -44,7 +44,7 @@
         $(document).ready(function()
         {
             $( "#navbar" ).load( "common/navbar.html" );
-            $( "#aboutus" ).load( "homepage/aboutus.html" );
+            $( "#aboutus" ).load( "aboutus/aboutus.html" );
             $( "#footer" ).load( "common/footer.html" );
         });
     </script>
