--- a/common/navbar.html
+++ b/common/navbar.html
@@ -124,7 +124,8 @@
     <hr class="hr navbarHr" />
   </div>
 
-  <script src="js/navbar.js"></script> 
+  <script src="js/navbar.js"></script>
+  <script src="js/myJS.js"></script> 
 </body>
 
 </html>
