--- a/productPage/product.html
+++ b/productPage/product.html
@@ -46,7 +46,7 @@
         crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.min.js"></script>
 
-    <script src="js/productlist.js"></script>
+    <script src="js/myJSTest.js"></script>
 
 </body>
 
