--- a/tietacksMain.html
+++ b/tietacksMain.html
@@ -15,7 +15,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 
-    <title>Product List Main Page</title>
+    <title>Tie Tacks</title>
 </head>
 
 <body>
@@ -25,11 +25,9 @@
     <!--insert product list-->
     <div id="productList"></div>
 
-    <!--
     <div id="category-list"></div>
 
     <div id="selected-category"></div>
-    -->
 
     <!--insert footer-->
     <div id="footer"></div>
@@ -50,7 +48,7 @@
         $(document).ready(function () {
             $("#navbar").load("common/navbar.html");
 
-            $("#productList").load("productpage/productList.html");
+            $("#productList").load("productpage/tietacks.html");
 
             $("#footer").load("common/footer.html");
         });
