--- a/aboutus/aboutus.html
+++ b/aboutus/aboutus.html
@@ -16,10 +16,89 @@
 <body>
 
 
+    <body>
+        <!-- Content of About Us -->
+        <div class="container">
+            <div class="row">
+                <div>
+                    <h1 class="text-center">Java Full Stack Development (JFSD) - Final Project</h1>
+                    <h2 class="text-center">To create a fully working web application final project (MVP) at the end of 3
+                        month bootcamp.</h2>
+                </div>
+                <div>
+                    <h2 class="text-center">Profile of the team members</h2>
+                    <br>
+                </div>
+            </div>
+        </div>
+        <div class="container" id="aboutUsContainer" style="width: 992px">
+            <div
+                class="row d-flex justify-content-around justify-content-lg-around justify-content-md-around justify-content-sm-around">
+                <div class="aboutUsCard card col-md-6">
+                    <div class="row justify-content-center">
+                        <img class="card-img-top" src="images/misc-DM-cropped.jpg" alt="Card image"
+                            style="height: 200px; width: 200px;">
+                    </div>
+                    <h4 class="card-title">Edward (Team Lead)</h4>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, sed
+                        debitis. Natus nisi saepe ea, ipsam veritatis molestias eos odio accusantium!
+                        Distinctio, voluptatem facere facilis voluptates illo ipsum porro. Praesentium.
+                        Eaque consequatur cupiditate distinctio ratione eos nisi, repudiandae doloremque nulla
+                        atque! Minima, ratione repellat! Temporibus recusandae eaque eum, praesentium ratione
+                        voluptatibus, doloremque quo quis ullam rerum nisi vel cupiditate. Facilis!</p>
+                    <a href="https://sg.linkedin.com/" class="btn btn-outline-primary" role="button">LinkedIn Profile</a>
+                </div>
+                <div class="aboutUsCard card col-md-6">
+                    <div class="row justify-content-center">
+                        <img class="card-img-top" src="images/misc-DM-cropped.jpg" alt="Card image"
+                            style="height: 200px; width: 200px;">
+                    </div>
+                    <h4 class="card-title">Soo Hua</h4>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, sed
+                        debitis. Natus nisi saepe ea, ipsam veritatis molestias eos odio accusantium!
+                        Distinctio, voluptatem facere facilis voluptates illo ipsum porro. Praesentium.
+                        Eaque consequatur cupiditate distinctio ratione eos nisi, repudiandae doloremque nulla
+                        atque! Minima, ratione repellat! Temporibus recusandae eaque eum, praesentium ratione
+                        voluptatibus, doloremque quo quis ullam rerum nisi vel cupiditate. Facilis!</p>
+                    <a href="https://sg.linkedin.com/" class="btn btn-outline-primary" role="button">LinkedIn Profile</a>
+                </div>
+                <div class="aboutUsCard card col-md-6">
+                    <div class="row justify-content-center">
+                        <img class="card-img-top" src="images/misc-DM-cropped.jpg" alt="Card image"
+                            style="height: 200px; width: 200px;">
+                    </div>
+                    <h4 class="card-title">Lakshmi</h4>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, sed
+                        debitis. Natus nisi saepe ea, ipsam veritatis molestias eos odio accusantium!
+                        Distinctio, voluptatem facere facilis voluptates illo ipsum porro. Praesentium.
+                        Eaque consequatur cupiditate distinctio ratione eos nisi, repudiandae doloremque nulla
+                        atque! Minima, ratione repellat! Temporibus recusandae eaque eum, praesentium ratione
+                        voluptatibus, doloremque quo quis ullam rerum nisi vel cupiditate. Facilis!</p>
+                    <a href="https://sg.linkedin.com/" class="btn btn-outline-primary" role="button">LinkedIn Profile</a>
+                </div>
+                <div class="aboutUsCard card col-md-6">
+                    <div class="row justify-content-center">
+                        <img class="card-img-top" src="images/misc-DM-cropped.jpg" alt="Card image"
+                            style="height: 200px; width: 200px;">
+                    </div>
+                    <h4 class="card-title">Sin Yuen</h4>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, sed
+                        debitis. Natus nisi saepe ea, ipsam veritatis molestias eos odio accusantium!
+                        Distinctio, voluptatem facere facilis voluptates illo ipsum porro. Praesentium.
+                        Eaque consequatur cupiditate distinctio ratione eos nisi, repudiandae doloremque nulla
+                        atque! Minima, ratione repellat! Temporibus recusandae eaque eum, praesentium ratione
+                        voluptatibus, doloremque quo quis ullam rerum nisi vel cupiditate. Facilis!</p>
+                    <a href="https://sg.linkedin.com/" class="btn btn-outline-primary" role="button">LinkedIn Profile</a>
+                </div>
+            </div>
+        </div>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+            crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.min.js"></script>
+    </body>
 
-
-
-    <!-- Content of About Us -->
+<!--  Content of About Us 
 
     <div class="container">
         <div class="row">
@@ -139,7 +218,7 @@
 
     </div>
 
-
+-->
 
 </body>
 
