--- a/common/footer.html
+++ b/common/footer.html
@@ -23,18 +23,15 @@
                         <a class="nav-link" href="aboutusMain.html">About Us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact Us</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Shipping Policy</a>
+                        <a class="nav-link" href="#" data-bs-toggle="modal" data-bs-target="#othersModal" onclick="setModalShipping();" >Shipping Policy</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Refund Policy</a>
+                        <a class="nav-link" href="#" data-bs-toggle="modal" data-bs-target="#othersModal" onclick="setModalRefund();">Refund Policy</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Privacy Policy</a>
+                        <a class="nav-link" href="#" data-bs-toggle="modal" data-bs-target="#othersModal" onclick="setModalPrivacy();">Privacy Policy</a>
                     </li>
                 </ul>
             </div>
