--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
     <!--insert carousel-->
     <div id="content"></div>
 
+    <div id="mainModal"></div> 
+
     <!--insert footer-->
     <div id="footer"></div>
 
@@ -51,7 +53,7 @@
 
             $("#content").load("homepage/content.html");
 
-            //$("#mainModal").load("common/mainModal.html");
+            $("#mainModal").load("common/mainModal.html");
 
             $("#footer").load("common/footer.html");
         });
