committing edward-feature 3

--- a/productPage/productlist.html
+++ b/productPage/productlist.html
@@ -36,7 +36,6 @@
     </div>
 
 
-
     <nav class="container pageNav" style="max-width: 992px" aria-label="Page navigation">
         <ul class="pagination">
             <li class="page-item">
@@ -64,7 +63,7 @@
         crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.min.js"></script>
 
-    <!-- <script src="js/myJS.js"></script> -->
+    <script src="js/myJS.js"></script>
 
 </body>
 
