--- a/common/navbar.html
+++ b/common/navbar.html
@@ -125,7 +125,7 @@
   </div>
 
   <script src="js/navbar.js"></script>
-  <script src="js/myJS.js"></script> 
+  <!-- <script src="js/myJS.js"></script> -->
 </body>
 
 </html>
