--- a/aboutus/aboutus.html
+++ b/aboutus/aboutus.html
@@ -36,30 +36,25 @@
                 class="row d-flex justify-content-around justify-content-lg-around justify-content-md-around justify-content-sm-around">
                 <div class="aboutUsCard card col-md-6">
                     <div class="row justify-content-center">
-                        <img class="card-img-top" src="images/misc-DM-cropped.jpg" alt="Card image"
+                        <img class="card-img-top" src="images/edward-profile-200x200px_360.jpg" alt="Card image"
                             style="height: 200px; width: 200px;">
                     </div>
                     <h4 class="card-title">Edward (Team Lead)</h4>
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, sed
-                        debitis. Natus nisi saepe ea, ipsam veritatis molestias eos odio accusantium!
-                        Distinctio, voluptatem facere facilis voluptates illo ipsum porro. Praesentium.
-                        Eaque consequatur cupiditate distinctio ratione eos nisi, repudiandae doloremque nulla
-                        atque! Minima, ratione repellat! Temporibus recusandae eaque eum, praesentium ratione
-                        voluptatibus, doloremque quo quis ullam rerum nisi vel cupiditate. Facilis!</p>
+                    <p class="card-text">Edward is a Junior Full Stack Developer in training, and he is excited to apply his skills in this field. With his extensive experience in business continuity management and risk analysis, he brings a fresh perspective to the tech industry. Throughout his career, he has developed a range of skills that will be valuable in his new role as a developer.
+                        Specifically, Edward has experience in developing business continuity plans, facilitating emergency preparedness exercises, and conducting workshops. These skills have provided him with a strong foundation in problem-solving and critical thinking, which will be an asset as he embarks on this new journey. In addition to his developing technical skills, his Bachelor of Arts in Psychology has given him a unique perspective on human behaviour that will be valuable as he works with clients and stakeholders.</p>
                     <a href="https://sg.linkedin.com/" class="btn btn-outline-primary" role="button">LinkedIn Profile</a>
                 </div>
                 <div class="aboutUsCard card col-md-6">
                     <div class="row justify-content-center">
-                        <img class="card-img-top" src="images/misc-DM-cropped.jpg" alt="Card image"
+                        <img class="card-img-top" src="images/soohuapotrait_360.jpg" alt="Card image"
                             style="height: 200px; width: 200px;">
                     </div>
                     <h4 class="card-title">Soo Hua</h4>
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, sed
-                        debitis. Natus nisi saepe ea, ipsam veritatis molestias eos odio accusantium!
-                        Distinctio, voluptatem facere facilis voluptates illo ipsum porro. Praesentium.
-                        Eaque consequatur cupiditate distinctio ratione eos nisi, repudiandae doloremque nulla
-                        atque! Minima, ratione repellat! Temporibus recusandae eaque eum, praesentium ratione
-                        voluptatibus, doloremque quo quis ullam rerum nisi vel cupiditate. Facilis!</p>
+                    <p class="card-text">Soo Hua is results driven with high personal and career goals.
+                        He enjoys spending time understanding problems and identifying innovative solutions.
+                        With experience spanning from Software Development, Project Management to Business Development, he is always looking to learn and improve. In his roles, he has excelled both as an independent contributor as well as a team player with strong written and verbal communication skills.
+                        Soo Hua is a certified Google Data Analytics Professional and ACTA for Training and Assessment at Institute of Adult Learning.
+                        Currently he is in Singapore Generation – Full Stack Development Bootcamp training to be a Full Stack Developer.</p>
                     <a href="https://sg.linkedin.com/" class="btn btn-outline-primary" role="button">LinkedIn Profile</a>
                 </div>
                 <div class="aboutUsCard card col-md-6">
