committing lakshmi-feature-4

--- a/adminMain.html
+++ b/adminMain.html
@@ -24,6 +24,9 @@
 
     <!--insert adminproduct-->
     <div id="adminproduct"></div>
+    
+    <!--insert mainModal-->
+    <div id="mainModal"></div>
 
     <!--insert footer-->
     <div id="footer"></div>
@@ -46,7 +49,7 @@
 
             $("#adminproduct").load("common/adminproduct.html");
 
-            //$("#mainModal").load("common/mainModal.html");
+            $("#mainModal").load("common/mainModal.html");
 
             $("#footer").load("common/footer.html");
         });
