--- a/common/login.html
+++ b/common/login.html
@@ -21,7 +21,7 @@
         <form class="needs-validation" onsubmit="return false;">
             <div class="form-group was validated">
                 <label class="form-label" for="user name">EMail </label>
-                <input class="form-control" type="user name" id="user name" required>
+                <input class="form-control" type="user name" id="username" required>
                 
                 <!-- <div class="Invalid-feedback">
                     Please enter your Name
@@ -30,7 +30,7 @@
 
             <div class="form-group was validated">  
                 <label class="form-label" for="exampleInputPassword1">Enter Password </label> 
-                <input class="form-control" type="password" class="form-control form-control-sm" id="exampleInputPassword1" required>       
+                <input class="form-control" type="password" class="form-control form-control-sm" id="password" required>       
                 <a href="#" style="float:right;font-size:12px;" onclick="forgotpassword()"> Forgot password? </a> 
                 <!-- <div class="Invalid-feedback">
                     Please enter your password
