--- a/common/aboutus.html
+++ b/common/aboutus.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link href="css/reset.css" rel="stylesheet">
-    <link href="css/myStyles.css" rel="stylesheet">
+
     <link href="css/aboutus.css" rel="stylesheet">
+    
 
     <title>About Us</title>
 </head>
@@ -22,8 +22,8 @@
             <div class="row">
                 <div>
                     <h1 class="text-center">Java Full Stack Development (JFSD) - Final Project</h1>
-                    <h2 class="text-center">To create a fully working web application final project (MVP) at the end of 3
-                        month bootcamp.</h2>
+                    <h2 class="text-center">To create a fully working web application final project (MVP) at the end of
+                        3 month bootcamp.</h2>
                 </div>
                 <div>
                     <h2 class="text-center">Profile of the team members</h2>
@@ -40,9 +40,22 @@
                             style="height: 200px; width: 200px;">
                     </div>
                     <h4 class="card-title">Edward (Team Lead)</h4>
-                    <p class="card-text">Edward is a Junior Full Stack Developer in training, and he is excited to apply his skills in this field. With his extensive experience in business continuity management and risk analysis, he brings a fresh perspective to the tech industry. Throughout his career, he has developed a range of skills that will be valuable in his new role as a developer.
-                        Specifically, Edward has experience in developing business continuity plans, facilitating emergency preparedness exercises, and conducting workshops. These skills have provided him with a strong foundation in problem-solving and critical thinking, which will be an asset as he embarks on this new journey. In addition to his developing technical skills, his Bachelor of Arts in Psychology has given him a unique perspective on human behaviour that will be valuable as he works with clients and stakeholders.</p>
-                    <a href="https://sg.linkedin.com/" class="btn btn-outline-primary" role="button">LinkedIn Profile</a>
+                    <p class="card-text">Edward is a Junior Full Stack Developer in training, and he is excited to apply
+                        his skills in this field.</p>
+                    With his extensive experience in business continuity management and risk analysis, he brings a
+                    fresh perspective to the tech industry.</p>
+                    <p>Throughout his career, he has developed a range of skills that will be valuable in his new role
+                        as a developer. Specifically,
+                        Edward has experience in developing business continuity plans, facilitating emergency
+                        preparedness exercises, and conducting workshops.</p>
+                    <p>These skills have provided him with a strong foundation in problem-solving and critical thinking,
+                        which will be an asset as he embarks
+                        on this new journey. In addition to his developing technical skills, his Bachelor of Arts in
+                        Psychology has given him a unique perspective
+                        on human behaviour that will be valuable as he works with clients and stakeholders.</p>
+                    <a href="https://www.linkedin.com/in/edward-tan-99779596/" target="_blank"
+                        class="btn btn-outline-primary" role="button">LinkedIn Profile</a>
+
                 </div>
                 <div class="aboutUsCard card col-md-6">
                     <div class="row justify-content-center">
@@ -50,40 +63,58 @@
                             style="height: 200px; width: 200px;">
                     </div>
                     <h4 class="card-title">Soo Hua</h4>
-                    <p class="card-text">Soo Hua is results driven with high personal and career goals.
-                        He enjoys spending time understanding problems and identifying innovative solutions.
-                        With experience spanning from Software Development, Project Management to Business Development, he is always looking to learn and improve. In his roles, he has excelled both as an independent contributor as well as a team player with strong written and verbal communication skills.
-                        Soo Hua is a certified Google Data Analytics Professional and ACTA for Training and Assessment at Institute of Adult Learning.
-                        Currently he is in Singapore Generation – Full Stack Development Bootcamp training to be a Full Stack Developer.</p>
-                    <a href="https://sg.linkedin.com/" class="btn btn-outline-primary" role="button">LinkedIn Profile</a>
+                    <p class="card-text">Soo Hua is results driven with high personal and career goals.</p>
+                    <p>He enjoys spending time understanding problems and identifying innovative solutions.</p>
+                    <p>With experience spanning from Software Development, Project Management to Business Development,
+                        he is always looking to learn and improve. In his roles, he has excelled both as an independent
+                        contributor as well as a team player with strong written and verbal communication skills.
+                        Soo Hua is a certified Google Data Analytics Professional and ACTA for Training and Assessment
+                        at Institute of Adult Learning.</p>
+                    <p>Currently he is in Singapore Generation Full Stack Development Bootcamp training to be a Full
+                        Stack Developer.</p>
+                    <br>
+                    <br>
+                    <br>
+                    <a href="https://www.linkedin.com/in/soo-hua-ng-3a63981a/" target="_blank"
+                        class="btn btn-outline-primary" role="button">LinkedIn
+                        Profile</a>
                 </div>
                 <div class="aboutUsCard card col-md-6">
                     <div class="row justify-content-center">
-                        <img class="card-img-top" src="images/misc-DM-cropped.jpg" alt="Card image"
+                        <img class="card-img-top" src="images/lakshmi.png" alt="Card image"
                             style="height: 200px; width: 200px;">
                     </div>
                     <h4 class="card-title">Lakshmi</h4>
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, sed
-                        debitis. Natus nisi saepe ea, ipsam veritatis molestias eos odio accusantium!
-                        Distinctio, voluptatem facere facilis voluptates illo ipsum porro. Praesentium.
-                        Eaque consequatur cupiditate distinctio ratione eos nisi, repudiandae doloremque nulla
-                        atque! Minima, ratione repellat! Temporibus recusandae eaque eum, praesentium ratione
-                        voluptatibus, doloremque quo quis ullam rerum nisi vel cupiditate. Facilis!</p>
-                    <a href="https://sg.linkedin.com/" class="btn btn-outline-primary" role="button">LinkedIn Profile</a>
+                    <p class="card-text">Lakshmi is a computer science graduate who intends to upgrade her skills to
+                        widen her knowledge in this field. She has also excelled and gained sales experience through
+                        being a sales coordinate, which has provided a unique opportunity for her to explore the world.
+                    </p>
+                    <p>She is currently embarking on a Junior Full Stack developer course, that is aimed to enhance her
+                        expertise in this field. Together with her past experiences, she will be able to bring herself
+                        to the next level, constantly learning and refining herself further.</p>
+                    <a href="https://www.linkedin.com/in/muthu-lakshmi-277361275/" target="_blank"
+                        class="btn btn-outline-primary" role="button">LinkedIn
+                        Profile</a>
                 </div>
                 <div class="aboutUsCard card col-md-6">
                     <div class="row justify-content-center">
-                        <img class="card-img-top" src="images/misc-DM-cropped.jpg" alt="Card image"
+                        <img class="card-img-top" src="images/sypic.jpg" alt="Card image"
                             style="height: 200px; width: 200px;">
                     </div>
                     <h4 class="card-title">Sin Yuen</h4>
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, sed
-                        debitis. Natus nisi saepe ea, ipsam veritatis molestias eos odio accusantium!
-                        Distinctio, voluptatem facere facilis voluptates illo ipsum porro. Praesentium.
-                        Eaque consequatur cupiditate distinctio ratione eos nisi, repudiandae doloremque nulla
-                        atque! Minima, ratione repellat! Temporibus recusandae eaque eum, praesentium ratione
-                        voluptatibus, doloremque quo quis ullam rerum nisi vel cupiditate. Facilis!</p>
-                    <a href="https://sg.linkedin.com/" class="btn btn-outline-primary" role="button">LinkedIn Profile</a>
+                    <p class="card-text">Sin Yuen is an experience helpdesk support and brings over 10 years of level 1
+                        IT support servicing users with their queries.</p>
+                    <p>She is currently undergoing a mid-career transition with Singapore Generation team and will be
+                        completing her Full Stack Developer programme. She hopes to apply the skills
+                        learnt from her FSD courses along with her working experiences to further her IT career
+                        progression.</p>
+                    <p>She enjoys trying new receipes during her free time</p>
+                    <br>
+                    <br>
+
+                    <a href="https://sg.linkedin.com/" target="_blank" class="btn btn-outline-primary"
+                        role="button">LinkedIn
+                        Profile</a>
                 </div>
             </div>
         </div>
@@ -93,7 +124,7 @@
         <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.min.js"></script>
     </body>
 
-<!--  Content of About Us 
+    <!--  Content of About Us 
 
     <div class="container">
         <div class="row">
