--- a/aboutusMain.html
+++ b/aboutusMain.html
@@ -7,7 +7,7 @@
 
     <link href="css/reset.css" rel="stylesheet">
     <link href="css/myStyles.css" rel="stylesheet">
-    <link href="css/aboutus.css" rel="stylesheet">
+    <!-- <link href="css/aboutus.css" rel="stylesheet"> -->
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     
@@ -20,6 +20,8 @@
 
     <!-- About Us -->
     <div id="aboutus"></div>
+
+    <div id="mainModal"></div> 
 
     <!--insert footer-->
     <div id="footer"></div>
@@ -41,11 +43,12 @@
     <!-- <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.min.js"></script> -->
 
     <script>
-        $(document).ready(function()
+        $(document).ready(function ()
         {
-            $( "#navbar" ).load( "common/navbar.html" );
-            $( "#aboutus" ).load( "aboutus/aboutus.html" );
-            $( "#footer" ).load( "common/footer.html" );
+            $("#navbar").load("common/navbar.html");
+            $("#aboutus").load("common/aboutus.html");
+            $("#mainModal").load("common/mainModal.html");
+            $("#footer").load("common/footer.html");
         });
     </script>
 
