--- a/productListMain.html
+++ b/productListMain.html
@@ -25,6 +25,9 @@
     <!--insert product list-->
     <div id="productList"></div>
 
+    <!--insert mainModal -->
+    <div id="mainModal"></div> 
+
     <!--
     <div id="category-list"></div>
 
@@ -50,7 +53,9 @@
         $(document).ready(function () {
             $("#navbar").load("common/navbar.html");
 
-            $("#productList").load("productpage/productList.html");
+            $("#productList").load("common/productList.html");
+
+            $("#mainModal").load("common/mainModal.html");
 
             $("#footer").load("common/footer.html");
         });
