--- a/common/productList.html
+++ b/common/productList.html
@@ -7,31 +7,50 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link href="css/reset.css" rel="stylesheet">
-    <link href="css/myStyles.css" rel="stylesheet">
-    <link href="css/product.css" rel="stylesheet">
-    <title>Product Page</title>
+    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N"
+        crossorigin="anonymous"></script>
+    <!-- <link href="css/reset.css" rel="stylesheet">
+    <link href="css/myStyles.css" rel="stylesheet"> -->
+    <link href="css/productList.css" rel="stylesheet" />
+    <title>Product List</title>
 </head>
 
 <body>
     <nav class="container" style="--bs-breadcrumb-divider: '>'; max-width: 992px;" aria-label="breadcrumb">
-        <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="#">Home</a></li>
-            <li class="breadcrumb-item"><a href="#">Neckties</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Gold Necktie</li>
+        <ol class="breadcrumb" id="breadcrumb">
+
+
         </ol>
     </nav>
 
-    <div class="product-name"></div>
-    <div class="product-description"></div>
-    <div class="product-image"></div>
+    <div class="container" style="max-width: 992px">
+        <div id="list-items">
+            <div id="row" class="row">
+
+
+
+
+            </div>
+        </div>
+    </div>
+
+
+    <nav class="container pageNav" style="max-width: 992px" aria-label="Page navigation">
+        <ul class="pagination">
+
+
+
+        </ul>
+    </nav>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.min.js"></script>
 
-    <script src="js/productlist.js"></script>
+    <script src="js/myJS.js"></script>
 
 </body>
 
