--- a/common/adminproduct.html
+++ b/common/adminproduct.html
@@ -71,6 +71,7 @@
            </form>
        </div>
        <script src="js/productform.js"></script> 
+       <script src = "js/myJS.js"></script>
 
        
 
